syntax = "proto3";

package bookpb;

option go_package = "proto/";

service BookService {
  rpc CreateBook (CreateBookRequest) returns (CreateBookResponse);
  rpc GetBook (GetBookRequest) returns (GetBookResponse);
  rpc GetBooksByAuthorId(GetBooksByAuthorIdRequest) returns (GetBooksByAuthorIdResponse);
  rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse);
  rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);
  rpc DeleteBooksByAuthorId(DeleteBooksByAuthorIdRequest) returns (DeleteBooksByAuthorIdResponse);
  rpc GetAllBooks(Empty) returns (GetAllBooksResponse);
}

message Book {
  int32 id = 1;
  string title = 2;
  int32 price = 3;
  int32 author_id = 4;
}

message CreateBookRequest {
  string title = 1;
  int32 price = 2;
  int32 author_id = 3;
}

message CreateBookResponse {
  string status = 1;
  string message = 2;
  Book book = 3;
}

message GetBookRequest {
  int32 id = 1;
}

message GetBookResponse {
  string status = 1;
  string message = 2;
  Book book = 3;
}

message GetBooksByAuthorIdRequest {
  int32 author_id = 1;
}

message GetBooksByAuthorIdResponse {
  string status = 1;
  string message = 2;
  repeated Book books = 3;
}

message UpdateBookRequest {
  int32 id = 1;
  string title = 2;
  int32 price = 3;
}

message UpdateBookResponse {
  string status = 1;
  string message = 2;
  Book book = 3;
}

message DeleteBookRequest {
  int32 id = 1;
}

message DeleteBookResponse {
  string status = 1;
  string message = 2;
}

message Empty{}

message GetAllBooksResponse {
  string status = 1;
  string message = 2;
  repeated Book book = 3;
}

message DeleteBooksByAuthorIdRequest {
  int32 author_id = 1; 
}

message DeleteBooksByAuthorIdResponse {
  string status = 1;
  string message = 2;
}